# cubehandler

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cubehandler/: __init__.py  cube.py
cubehandler/cli/: __init__.py  main.py
cubehandler/cli/commands/: render.py  shrink.py
tests/: CH4_HOMO.cube  test_cube.py
