[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "cubehandler"

[project]
name = "cubehandler"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = 'LICENSE.txt'}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "ase",
]
