[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "cubehandler"

[project]
name = "cubehandler"
dynamic = ["version", "description"]
readme = "README.md"
# license = {file = 'LICENSE.txt'}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "ase",
    "click",
    "scikit-image",
]

[project.optional-dependencies]
dev = [
  "bumpver==2023.1129",
  "pre-commit==3.6.0",
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
]

[project.scripts]
cubehandler = 'cubehandler.cli.main:cli'

[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
tag_message = "Release {new_version}."
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"cubehandler/version.py" = [
    '__version__ = "{pep440_version}"',
]
